--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,16 @@
 	stroke: #999;
 	stroke-opacity: .6;
 	}
+
+.states {
+	stroke: #000;
+	fill-opacity: 1;
+}
+
+path {
+	fill: none;
+	stroke: #000;
+	stroke-width: .25px;
+	stroke-linejoin: round;
+	}
+
