--- a/public_html/css/text.css
+++ b/public_html/css/text.css
@@ -1,63 +1,45 @@
-
-/* 
-    Created on : Dec 6, 2015, Dec 6, 2015 2:15:37 PM
-    Author     : Fei
-*/
-
-
-/* style appied to all pages */
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-weight: 400;
 	background-color: #DDE4E9;
+	/*border: 1px solid steelblue;*/
+	padding: 20px 20px 20px 20px;
 }
 
-div {
-	/*border: 1px solid red;*/
-	/*margin-top: 10px;*/
-}
-
-.container {	
-	border: 2px solid darkgrey;
-	border-radius: 10px;
-	padding-bottom: 30px;
-}
-
-.container-fluid {
-	border: 2px solid darkgrey;
-	border-radius: 10px;
-	width: 1800px;
-}
-
-.block {
-	margin-top: 10px;
+.row {
+	margin-top: 30px;
 }
 
 .title {
-	margin: 20px 0px 0px 0px;
-	text-align: left;
-	font-size: 2em;
-	font-weight: bold;
-}
-
-.subtitle {
-	margin: 20px 0px 0px 0px;
-	text-align: left;
-	font-size: 1em;
-	font-weight: bold;
+	font-size: 3em;
 	
 }
 
-.author {
-	/*margin: 10px 0px 10px 0px;*/
-	text-align: left;
-	font-size: 1em;
-	font-style: italic;
+.subtitle {
+	font-size: 1.5em;
 }
 
+.context {
+	font-size: 1em;
+}
 
 .img {
 	text-align: left;
+}
+
+.video-title {
+	font-size: 1.2em;
+}
+
+.btn:after {
+	font-family: "Glyphicons Halflings";
+	content: "\e114";
+	float: right;
+	margin-left: 15px;
+}
+	/* Icon when the collapsible content is hidden */
+.btn.collapsed:after {
+	content: "\e080";
 }
 
 
@@ -102,7 +84,7 @@ table.center {
 	width: 100%;
 }
 
-.row, .header { 
+/*.row, .header { 
 	clear: left;
 	font-size: 12px;
 	line-height: 18px;
@@ -111,7 +93,7 @@ table.center {
 
 .row {
 	margin-left: 0;
-}
+}*/
 
 /*Different colors for even and odd rows*/
 /*.row:nth-child(odd) {
@@ -137,3 +119,5 @@ table.center {
 	height: 18px; /* should be the same with .header */
 	text-align: center;
 }
+
+
